--- a/express/views/signup.ejs
+++ b/express/views/signup.ejs
@@ -260,7 +260,7 @@
                             </div>
                             
                             <div class="form-label-group">
-                                <input type="password" id="inputPassword" class="form-control" placeholder="Password again" required>
+                                <input type="password" id="inputPassword" name = "repassword"class="form-control" placeholder="Password again" required>
                                 <label for="inputPassword"></label>
                             </div>  
                             
