--- a/express/views/birth.ejs
+++ b/express/views/birth.ejs
@@ -58,9 +58,8 @@
                                 </div>  
                                 <br>
     
-                                <a href="/index" class="button">card Production♡</a>
-    
-                                                
+                                <a href="/birthproduction" class="button">card Production♡</a>
+                  
                             </form>
                         </div>
 					</section>
