--- a/express/views/birth2.ejs
+++ b/express/views/birth2.ejs
@@ -57,7 +57,7 @@
                                 </div>  
                                 <br>
     
-                                <a href="/index" class="button">card Production♡</a>
+                                <a href="/birth2production" class="button">card Production♡</a>
     
                                                 
                             </form>
