--- a/express/views/marry.ejs
+++ b/express/views/marry.ejs
@@ -61,7 +61,7 @@
                                 </div>  
                                 <br>
     
-                                <a href="/index" class="button">card Production♡</a>
+                                <a href="/marryproduction" class="button">card Production♡</a>
                                                 
                             </form>
                         </div>
