--- a/express/views/marry2.ejs
+++ b/express/views/marry2.ejs
@@ -63,7 +63,7 @@
                                 </div>  
                                 <br>
     
-                                <a href="/index" class="button">card Production♡</a>
+                                <a href="/marry2production" class="button">card Production♡</a>
     
                                                 
                             </form>
