--- a/express/views/birth2production.ejs
+++ b/express/views/birth2production.ejs
@@ -13,7 +13,6 @@
 				padding: 0;
 				overflow: hidden;
 			}
-
 			li{
 				float: left;
 			}
@@ -57,7 +56,7 @@
 								</ul>
 								<br>
 
-                                <a href="/index" class="button">Check♡</a>
+                                <a href="/birth2production" class="button">Check♡</a>
                                                 
                             </form>
                         </div>
