--- a/express/views/birthproduction.ejs
+++ b/express/views/birthproduction.ejs
@@ -24,7 +24,7 @@
 		<!-- Header -->
             <header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="avatar_1.jpg" alt="" /></a><br>
+					<a href="#" class="image avatar"><img src="/images/avatar_1.jpg" alt="" /></a><br>
 					<a href="/login" class="myButton">logout</a>
                     <h1><a href="/index">main</a><br />
 					<strong><a href="/card">card design</a></strong><br />
@@ -42,7 +42,7 @@
 						
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/images/생일카드.jpeg"" class="image fit thumb"><img src="/images/생일카드.jpeg"" alt="" /></a>
+								<a href="/images/생일카드.jpeg"" class="image fit thumb"><img src="/images/생일카드.png"" alt="" /></a>
 							</article>
                             <form>
 								주문 되었습니다. <br><br>
