--- a/express/views/marryproduction.ejs
+++ b/express/views/marryproduction.ejs
@@ -24,7 +24,7 @@
 		<!-- Header -->
             <header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="avatar_1.jpg" alt="" /></a><br>
+					<a href="#" class="image avatar"><img src="/images/avatar_1.jpg" alt="" /></a><br>
 					<a href="/login" class="myButton">logout</a>
                     <h1><a href="/index">main</a><br />
 					<strong><a href="/card">card design</a></strong><br />
