--- a/express/views/birth2.ejs
+++ b/express/views/birth2.ejs
@@ -35,7 +35,7 @@
 								<h3>생일 카드 ver.2</h3>
 								<p>생일 축하 카드 ver.2</p>
 							</article>
-							<form>
+							<form action = "/birth2production" method ="POST">	
                                 <div class="form-label-group">
                                     <input type="text" id="inputEmail" class="form-control" placeholder="이름" required>
                                     <label for="inputPassword"></label>
@@ -55,10 +55,9 @@
                                     <input type="text" id="inputEmail" class="form-control" placeholder="연락처" required>
                                     <label for="inputPassword"></label>
                                 </div>  
-                                <br>
-    
-                                <a href="/birth2production" class="button">card Production♡</a>
-    
+								<br>
+								    
+								<input type="submit" class="button" value = "card Production♡" > 
                                                 
                             </form>
                         </div>
