--- a/express/views/birth.ejs
+++ b/express/views/birth.ejs
@@ -36,7 +36,7 @@
 								<p>생일 축하 카드 ver.1</p>
 							</article>
 							
-							<form>
+							<form action = "./birthproduction" method ="POST">
                                 <div class="form-label-group">
                                     <input type="text" id="inputEmail" class="form-control" placeholder="이름" required>
                                     <label for="inputPassword"></label>
@@ -58,8 +58,7 @@
                                 </div>  
                                 <br>
     
-                                <a href="/birthproduction" class="button">card Production♡</a>
-                  
+								<input type="submit" class="button" value = "card Production♡" > 
                             </form>
                         </div>
 					</section>
