--- a/express/views/birth2production.ejs
+++ b/express/views/birth2production.ejs
@@ -56,7 +56,7 @@
 								</ul>
 								<br>
 
-                                <a href="/birth2production" class="button">Check♡</a>
+                                <a href="/index" class="button">Check♡</a>
                                                 
                             </form>
                         </div>
