--- a/express/views/birth2production.ejs
+++ b/express/views/birth2production.ejs
@@ -40,8 +40,8 @@
 					<section id="two">
 						
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="/images/생일카드2.jpeg"" class="image fit thumb"><img src="/images/생일카드2.jpeg"" alt="" /></a>
+							<article class="col-8 work-item">
+								<a href="/images/생일카드2.jpeg"" class="image fit thumb"><img src="/images/생일카드2_2.png"" alt="" /></a>
 							</article>
                             <form>
 								주문 되었습니다. <br><br>
