--- a/express/views/birthproduction.ejs
+++ b/express/views/birthproduction.ejs
@@ -41,8 +41,8 @@
 					<section id="two">
 						
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="/images/생일카드.jpeg"" class="image fit thumb"><img src="/images/생일카드.png"" alt="" /></a>
+							<article class="col-8 work-item">
+								<a href="/images/생일카드.png"" class="image fit thumb"><img src="/images/생일카드1_2.png"" alt="" /></a>
 							</article>
                             <form>
 								주문 되었습니다. <br><br>
