--- a/express/views/birth2production.ejs
+++ b/express/views/birth2production.ejs
@@ -41,7 +41,7 @@
 						
 						<div class="row">
 							<article class="col-8 work-item">
-								<a href="/images/생일카드2.jpeg"" class="image fit thumb"><img src="/images/생일카드2_2.png"" alt="" /></a>
+								<img src="/images/생일카드2_2.png"" alt="" />
 							</article>
                             <form>
 								주문 되었습니다. <br><br>
