--- a/express/views/marryproduction.ejs
+++ b/express/views/marryproduction.ejs
@@ -42,7 +42,7 @@
 						
 						<div class="row">
 							<article class="col-8 work-item">
-								<a href="/images/청첩장.jpeg"" class="image fit thumb"><img src="/images/청첩장1_2.png"" alt="" /></a>
+								<img src="/images/청첩장1_2.png"" alt="" />
 							</article>
                             <form>
 								주문 되었습니다. <br><br>
