--- a/express/views/birth2.ejs
+++ b/express/views/birth2.ejs
@@ -31,7 +31,7 @@
 						<div class="row">
 							
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="생일카드2.jpeg" class="image fit thumb"><img src="/images/생일카드2.jpeg" alt="" /></a>
+								<img src="/images/생일카드2.jpeg" alt="" />
 								<h3>생일 카드 ver.2</h3>
 								<p>생일 축하 카드 ver.2</p>
 							</article>
