--- a/express/views/marry2.ejs
+++ b/express/views/marry2.ejs
@@ -31,7 +31,7 @@
 						<div class="row">
 							
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="청첩장2.jpeg" class="image fit thumb"><img src="/images/청첩장2.jpeg" alt="" /></a>
+								<img src="/images/청첩장2.jpeg" alt="" />
 								<h3>청첩장 ver.2</h3>
 								<p>결혼 청첩장 ver.2</p>
 							</article>
