--- a/express/views/birth.ejs
+++ b/express/views/birth.ejs
@@ -31,7 +31,7 @@
 						<div class="row">
 							
 							<article class="col-6 col-12-xsmall work-item">
-								<img src="/images/생일카드.png" alt="" />
+								<img src="/images/생일카드.png" alt="" class="image fit"/>
 								<h3>생일 카드 ver.1</h3>
 								<p>생일 축하 카드 ver.1</p>
 							</article>
