--- a/express/views/signup.ejs
+++ b/express/views/signup.ejs
@@ -269,6 +269,7 @@
                                 <label for="inputPassword"></label>
                             </div>  
                             <br>
+                            <input type="submit" class="myButton" value = "login"> 
                             <input type="submit" class="myButton" value = "signup">     
                         </form>
 					</center>
