--- a/express/views/birthproduction.ejs
+++ b/express/views/birthproduction.ejs
@@ -42,7 +42,7 @@
 						
 						<div class="row">
 							<article class="col-8 work-item">
-								<img src="/images/생일카드1_2.png"" alt="" />
+								<img src="/images/생일카드1_2.png" class="image fit" alt="" />
 							</article>
                             <form>
 								주문 되었습니다. <br><br>
