--- a/express/views/marry.ejs
+++ b/express/views/marry.ejs
@@ -30,7 +30,7 @@
 						
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<img src="/images/청첩장.jpeg" alt="" />
+								<img src="/images/청첩장.jpeg" class="image fit" alt="" />
 								<h3>청첩장 ver.1</h3>
 								<p>결혼 청첩장 ver.1</p>
                             </article>
