--- a/express/views/signup.ejs
+++ b/express/views/signup.ejs
@@ -269,7 +269,7 @@
                                 <label for="inputPassword"></label>
                             </div>  
                             <br>
-                            <input type="submit" class="myButton" value = "login"> 
+                            <a href="/index" class="myButton">login</a>               
                             <input type="submit" class="myButton" value = "signup">     
                         </form>
 					</center>
