--- a/express/views/marry.ejs
+++ b/express/views/marry.ejs
@@ -44,12 +44,7 @@
                                     <input type="text" id="inputEmail" name = "sinbu" class="form-control" placeholder="신부 이름" required>
                                     <label for="inputPassword"></label>
                                 </div>
-                                
-                                <div class="form-label-group">
-                                    <input type="text" id="inputEmail" name = "date" class="form-control" placeholder="결혼 날짜 및 시간" required>
-                                    <label for="inputPassword"></label>
-                                </div>
-                                
+                                                                
                                 <div class="form-label-group">
                                     <input type="text" id="inputEmail" name = "place" class="form-control" placeholder="장소" required>
                                     <label for="inputPassword"></label>
@@ -58,7 +53,13 @@
                                 <div class="form-label-group">
                                     <input type="text" id="inputEmail" name ="phonenumber" class="form-control" placeholder="연락처" required>
                                     <label for="inputPassword"></label>
-                                </div>  
+								</div>
+								
+								<div class="form-label-group">
+                                    <input type="date" id="inputEmail" name = "date" class="form-control" placeholder="결혼 날짜 및 시간" required>
+                                    <label for="inputPassword"></label>
+                                </div>
+
                                 <br>
 								<input type="submit" class="button" value = "card Production♡" > 
                                                 
