--- a/express/views/birth2.ejs
+++ b/express/views/birth2.ejs
@@ -37,22 +37,22 @@
 							</article>
 							<form action = "/birth2production" method ="POST">	
                                 <div class="form-label-group">
-                                    <input type="text" id="inputEmail" class="form-control" placeholder="이름" required>
+                                    <input type="text" id="inputEmail" class="form-control" placeholder="받는 사람" required>
+                                    <label for="inputPassword"></label>
+                                </div>
+                                
+                                <div class="form-label-group">
+                                    <input type="text" id="inputEmail" class="form-control" placeholder="보내는 사람" required>
                                     <label for="inputPassword"></label>
                                 </div>
                                 
                                 <div class="form-label-group">
                                     <input type="text" id="inputEmail" class="form-control" placeholder="하고싶은 말" required>
                                     <label for="inputPassword"></label>
-                                </div>
-                                
-                                <div class="form-label-group">
-                                    <input type="text" id="inputEmail" class="form-control" placeholder="주소" required>
-                                    <label for="inputPassword"></label>
                                 </div>  
                                 
                                 <div class="form-label-group">
-                                    <input type="text" id="inputEmail" class="form-control" placeholder="연락처" required>
+                                    <input type="text" id="inputEmail" class="form-control" placeholder="날짜" required>
                                     <label for="inputPassword"></label>
                                 </div>  
 								<br>
