--- a/express/views/birth2.ejs
+++ b/express/views/birth2.ejs
@@ -37,22 +37,22 @@
 							</article>
 							<form action = "/birth2production" method ="POST">	
                                 <div class="form-label-group">
-                                    <input type="text" id="inputEmail" class="form-control" placeholder="받는 사람" required>
+                                    <input type="text" id="inputEmail" name = "receive" class="form-control" placeholder="받는 사람" required>
                                     <label for="inputPassword"></label>
                                 </div>
                                 
                                 <div class="form-label-group">
-                                    <input type="text" id="inputEmail" class="form-control" placeholder="보내는 사람" required>
+                                    <input type="text" id="inputEmail" name = "send" class="form-control" placeholder="보내는 사람" required>
                                     <label for="inputPassword"></label>
                                 </div>
                                 
                                 <div class="form-label-group">
-                                    <input type="text" id="inputEmail" class="form-control" placeholder="하고싶은 말" required>
+                                    <input type="text" id="inputEmail" name = "docu"class="form-control" placeholder="하고싶은 말" required>
                                     <label for="inputPassword"></label>
                                 </div>  
                                 
                                 <div class="form-label-group">
-                                    <input type="text" id="inputEmail" class="form-control" placeholder="날짜" required>
+                                    <input type="date" id="inputEmail" name = "date" class="form-control" placeholder="날짜" required>
                                     <label for="inputPassword"></label>
                                 </div>  
 								<br>
