--- a/express/views/birthproduction.ejs
+++ b/express/views/birthproduction.ejs
@@ -3,6 +3,52 @@
 <html>
 	<head>
 		<title>카드 제작</title>
+		<!-- 글자 스타일-->	
+		<style>
+		
+				@font-face{
+				font-family:font1;
+				src:url("./font/빨간우체통.ttf")
+				}
+		
+				@font-face{
+				font-family:font2;
+				src:url("./font/배달의민족.ttf")
+				}
+				.title{
+					font-family:font1;
+					position:absolute;
+					   top:370px;
+					left:790px;
+					font-size:25px;
+					color:hotpink
+				}
+				.who{
+					font-family:font1;
+					position:absolute;
+					   top:400px;
+					left:820px;
+					font-size:17px;
+					color:tomato
+				}
+				.docu{
+					font-family:font1;
+					position:absolute;
+					   top:470px;
+					left:630px;
+					font-size:25px;
+					color:palevioletred
+				}
+		
+				.date{
+					font-family:font1;
+					position:absolute;
+					   top:560px;
+					left:800px;
+					font-size:15px;
+					color:green
+				}
+				</style>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/stylesheets/main.css" />
@@ -56,6 +102,11 @@
 									<li><a href="#"><img src="/images/twitter.png" width="50" alt="" /></a><br></li>
 								</ul>
 								<br>
+
+								<div class = "title"> <%= receive %>님 생일축하드립니다! </div>
+								<div class = "who"> - <%= send %>님 -</div>
+								<div class = "docu"> <%= docu %> </div>
+								<div class = "date"> <%= date %></div>
 
                                 <a href="/index" class="button">Check♡</a>
                                                 
