--- a/express/views/marry.ejs
+++ b/express/views/marry.ejs
@@ -12,7 +12,7 @@
 		<!-- Header -->
             <header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="/images/avatar_1.jpg" alt="" /></a><br>
+					<img src="/images/avatar_1.jpg" class="image avatar" alt="" /><br>
 					<a href="/" class="myButton">logout</a>
                     <h1><a href="/index">main</a><br />
 					<strong><a href="/card">card design</a></strong><br />
@@ -56,7 +56,7 @@
 								</div>
 								
 								<div class="form-label-group">
-                                    <input type="date" id="inputEmail" name = "date" class="form-control" placeholder="결혼 날짜 및 시간" required>
+                                    날짜 : <input type="date" id="inputEmail" name = "date" class="form-control" placeholder="결혼 날짜 및 시간" required>
                                     <label for="inputPassword"></label>
                                 </div>
 
