--- a/express/views/birth.ejs
+++ b/express/views/birth.ejs
@@ -12,7 +12,7 @@
 		<!-- Header -->
             <header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="/images/avatar_1.jpg" alt="" /></a><br>
+					<img src="/images/avatar_1.jpg" class="image avatar" alt="" /><br>
 					<a href="/" class="myButton">logout</a>
                     <h1><a href="/index">main</a><br />
 					<strong><a href="/card">card design</a></strong><br />
@@ -53,7 +53,7 @@
                                 </div>  
                                 
                                 <div class="form-label-group">
-                                    <input type="text" id="inputEmail" class="form-control" placeholder="날짜" required>
+                                    날짜 : <input type="text" id="inputEmail" class="form-control" placeholder="날짜" required>
                                     <label for="inputPassword"></label>
                                 </div>  
                                 <br>
