--- a/express/views/card.ejs
+++ b/express/views/card.ejs
@@ -12,7 +12,7 @@
 		<!-- Header -->
             <header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="/images/avatar_1.jpg" alt="" /></a><br>
+					<img src="/images/avatar_1.jpg" class="image avatar" alt="" /><br>
 					<a href="/" class="myButton">logout</a>
                     <h1><a href="/index">main</a><br />
 					<strong><a href="/card">card design</a></strong><br />
