--- a/express/views/birth2.ejs
+++ b/express/views/birth2.ejs
@@ -52,7 +52,7 @@
                                 </div>  
                                 
                                 <div class="form-label-group">
-                                    <input type="date" id="inputEmail" name = "date" class="form-control" placeholder="날짜" required>
+                                    날짜 : <input type="date" id="inputEmail" name = "date" class="form-control" placeholder="결혼 날짜 및 시간" required>
                                     <label for="inputPassword"></label>
                                 </div>  
 								<br>
