--- a/express/views/birth.ejs
+++ b/express/views/birth.ejs
@@ -53,11 +53,7 @@
                                 </div>  
                                 
                                 <div class="form-label-group">
-<<<<<<< HEAD
-                                    날짜 : <input type="text" id="inputEmail" class="form-control" placeholder="날짜" required>
-=======
-                                    <input type="date" id="inputEmail" name = "date" class="form-control" placeholder="날짜" required>
->>>>>>> 0f3eda5737db092588aa7345291359c5a8de4b64
+                                    날짜 : <input type="date" id="inputEmail" name = "date" class="form-control" placeholder="결혼 날짜 및 시간" required>
                                     <label for="inputPassword"></label>
                                 </div>  
                                 <br>
