--- a/express/views/Q&A.ejs
+++ b/express/views/Q&A.ejs
@@ -33,15 +33,16 @@
 						<p>ex) 카드 제작 비용이 궁금해요! <br> ex) 카드 제작 되는데 얼마나 걸리나요?</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="#">
+								<form method="post" action="./send">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
 										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 									</div>
+									<br>
+									<input type="submit" value="Send Message" />
 								</form>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</div>
 							<div class="col-4 col-12-small">
