--- a/express/views/birth.ejs
+++ b/express/views/birth.ejs
@@ -58,11 +58,10 @@
                                 </div>  
                                 <br>
     
-								<input type="d" class="button" value = "card Production♡" > 
+								<input type="submit" class="button" value = "card Production♡" > 
                             </form>
                         </div>
 					</section>
-
 					<section id="three">
 						
 					</section>
