--- a/express/views/marryproduction.ejs
+++ b/express/views/marryproduction.ejs
@@ -112,7 +112,7 @@
 								</ul>
 								<br>
 								<div class = "title"> <%= sinrang %> ♥ <%= sinbu %> 결혼합니다. </div>
-								<div class = "who">신랑 : <%= sinrang %> 신부 : <%= sinbu %> </div>
+								<div class = "who"><span style="color:blue">신랑 </span>: <%= sinrang %> <span style="color:hotpink">신부</span> : <%= sinbu %> </div>
 								<div class = "docu">영원한 사랑, 영원한 행복을 약속하는 두사람이<br>하 나가 되는 순간을 축복해주십시오.
 								</div>
 								<div class = "date_place"> 장소:<%= place %> <br>  일시:<%= date %></div>
