아마 완성작

--- a/express/views/marry2production.ejs
+++ b/express/views/marry2production.ejs
@@ -15,6 +15,11 @@
 				font-family:font2;
 				src:url("./font/배달의민족.ttf")
 				}
+
+				@font-face{
+				font-family:font3;
+				src:url("./font/HanS Memory.ttf");
+				}
 				.title{
 					font-family:font1;
 					position:absolute;
@@ -32,10 +37,10 @@
 					color:purple
 				}
 				.docu{
-					font-family:font1;
+					font-family:font3;
 					position:absolute;
 					   top:410px;
-					left:650px;
+					left:630px;
 					font-size:12px;
 					color:palevioletred
 				}
@@ -115,9 +120,9 @@
 								<div class = "who"><span style="color:blue">신랑</span> : <%= sinrang %> <span style="color:hotpink">신부</span> : <%= sinbu %> </div>
 								<div class = "docu">서로 다른 길을 걸어온 저희가<br>
 										이제 부부의 연으로 한길을 걸어가고자 합니다.
-										서로의 옆자리에 가장 어울리는 <br>
+										서로의 옆자리에<br> 가장 어울리는
 										반려자가 되어 살아가도록 하겠습니다. 
-										믿음과 사랑으로 하나 되는 <br>
+										믿음과 사랑으로 <br> 하나 되는
 										이 자리에 함께하셔서 축복해 주시기 바랍니다.<br>
 								</div>
 								<div class = "date_place"> 장소:<%= place %> <br>  일시:<%= date %></div>
