--- a/express/views/marryproduction.ejs
+++ b/express/views/marryproduction.ejs
@@ -8,13 +8,19 @@
 		
 		@font-face{
 		font-family:font1;
-		src:url("./font/빨간우체통.ttf")
+		src:url("./font/빨간우체통.ttf");
 		}
 
 		@font-face{
 		font-family:font2;
-		src:url("./font/배달의민족.ttf")
+		src:url("./font/배달의민족.ttf");
 		}
+
+		@font-face{
+		font-family:font3;
+		src:url("./font/HanS Memory.ttf");
+		}
+
 		.title{
 			font-family:font1;
 			position:absolute;
@@ -32,10 +38,10 @@
 			color:purple
 		}
 		.docu{
-			font-family:font1;
+			font-family:font3;
 			position:absolute;
        		top:430px;
-        	left:700px;
+        	left:670px;
         	font-size:15px;
 			color:palevioletred
 		}
