--- a/express/views/login.ejs
+++ b/express/views/login.ejs
@@ -258,7 +258,7 @@
                             
                         <h6><div class="custom-control custom-checkbox mb-3">
                             <input type="checkbox" class="custom-control-input" id="customCheck1">
-                            <label class="custom-control-label" for="customCheck1">Remember password</label>
+                            <label class="custom-control-label" for="customCheck1">Remember information</label>
                         </div></h6>
 
                         <input type="submit" class="myButton" value = "login" > 
