--- a/express/views/marry2.ejs
+++ b/express/views/marry2.ejs
@@ -12,8 +12,7 @@
 		<!-- Header -->
             <header id="header">
 				<div class="inner">
-					<img src="/images/avatar_1.jpg" class="image avatar" alt="" /><br>
-					<a href="/" class="myButton">logout</a>
+					<a href="information"> <img src="/images/avatar_1.jpg" class="image avatar" alt="" /></a><br>
                     <h1><a href="/index">main</a><br />
 					<strong><a href="/card">card design</a></strong><br />
 					<a href="/Q&A">Q&A</a></h1>
