--- a/express/views/marry2production.ejs
+++ b/express/views/marry2production.ejs
@@ -84,7 +84,7 @@
 		<!-- Header -->
             <header id="header">
 				<div class="inner">
-					<img src="/images/avatar_1.jpg" class="image avatar" alt="" /><br>
+					<a href="information"> <img src="/images/avatar_1.jpg" class="image avatar" alt="" /></a><br>
 					<a href="/login" class="myButton">logout</a>
                     <h1><a href="/index">main</a><br />
 					<strong><a href="/card">card design</a></strong><br />
