--- a/express/views/index.ejs
+++ b/express/views/index.ejs
@@ -28,7 +28,7 @@
 						
 					<section id="two"> 
 							<h2>♡Celeb card♡<br />
-								특별한 카드를 제작해보세요.</h2>
+								<span style="color:peru"><%= username %></span>님! 특별한 카드를 제작해보세요!!</h2>
 							</header>
 							<p>내가 직접 제작하는 Celeb card <br>
 								당신만의 특별한 카드 제작하는 곳
