--- a/express/views/information.ejs
+++ b/express/views/information.ejs
@@ -7,6 +7,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/stylesheets/main.css" />
 	</head>
+	<style>
+		@font-face{
+			font-family:font1;
+			src:url("./font/배달의민족.ttf")
+		}
+
+		.hg{
+			font-family:font1;
+		}
+
+		.ls{
+			font-family:font1;
+		}
+	</style>
 	<body class="is-preload">
 
 		<!-- Header -->
@@ -33,7 +47,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img src="/images/boy.png" width="200" alt=""/>
 							</article>
-							<form>
+							<form class = "hg">
 								<br>
 								<b><h2>개발자 : 정한결</h2></b>
 								<h4>역할 : 기획, 백앤드</h4>
@@ -44,7 +58,7 @@
                             <article class="col-6 col-12-xsmall work-item">
 								<img src="/images/girl.png" width="200" alt=""/>
 							</article>
-							<form>
+							<form class = "ls">
 								<br>
 								<b><h2>개발자 : 이세연</h2></b>
 								<h4>역할 : 디자인, 프론트 앤드</h4>  
