--- a/express/views/marryproduction.ejs
+++ b/express/views/marryproduction.ejs
@@ -86,7 +86,7 @@
             <header id="header">
 				<div class="inner">
 					<a href="information"> <img src="/images/avatar_1.jpg" class="image avatar" alt="" /></a><br>
-					<a href="/login" class="myButton">logout</a>
+					<a href="/" class="myButton">logout</a>
                     <h1><a href="/index">main</a><br />
 					<strong><a href="/card">card design</a></strong><br />
 					<a href="/Q&A">Q&A</a></h1>
