--- a/express/views/index.ejs
+++ b/express/views/index.ejs
@@ -13,7 +13,7 @@
             <header id="header">
 				<div class="inner">
 					<a href="information"> <img src="/images/avatar_1.jpg" class="image avatar" alt="" /></a><br>
-					<a href="/login" class="myButton">logout</a>
+					<a href="/" class="myButton">logout</a>
 					<h1><strong><a href="/index">main</a></strong><br />
 					<a href="/card">card design</a><br />
 					<a href="/Q&A">Q&A</a></h1>
