--- a/express/views/card.ejs
+++ b/express/views/card.ejs
@@ -3,6 +3,16 @@
 <html>
 	<head>
 		<title>카드 제작</title>
+		<style>
+		@font-face{
+			font-family:font1;
+			src:url("./font/빨간우체통.ttf")
+		}
+		.cd{
+			font-family:font1;
+			font-size:20px;	
+		}
+		</style>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/stylesheets/main.css" />
@@ -23,7 +33,9 @@
 
 			<div id="main">
 					<section id="one">
-						<h2>♡Card Design♡</h2>
+						<div class ="cd">
+							<h2>♡Card Design♡</h2>
+						</div>
 					</section>
 
 					<section id="two">
